Add login redirection targets, registration link, and event leave functionality
- Update `security.yaml` to include `default_target_path` for login success and logout redirection.
- Add "Create an account" link in `login.html.twig` and login prompt in `register.html.twig`.
- Improve homepage layout with new buttons and conditional sections for authenticated users and events.
- Add `leave` action in `EventController` to allow users to leave events.
- Enhance `UserController` error messages and fix formatting issues in `home.html.twig`.

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -24,5 +24,7 @@
 
             <input type="submit" class="btn" value="Register">
         {{ form_end(registrationForm) }}
+
+        <p>Already have an account? <a class="link" href="{{ path('app_login') }}">login here</a></p>
     </div>
 {% endblock %}
