--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -44,6 +44,8 @@
 
             <input type="submit" value="Connect">
         </form>
+
+        <a class="link" href="{{ path('app_register') }}">Create an account</a>
     </div>
 
 {% endblock %}
