--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -37,6 +37,7 @@
                    <h3><i class="fa-solid fa-user"></i> {{ event.users | length }} users</h3>
 
                    <div class="btns">
+
                        {% if app.user == event.creator %}
                            <a class="btn" href="{{ path('event_edit', {'id': event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
                        {% else %}
@@ -48,6 +49,7 @@
                                <a class="btn" href={{ path('event_join', {id: event.id, title: event.title}) }}>Join</a>
                            {% endif %}
                        {% endif %}
+
                        <a class="btn" href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                    </div>
                </div>
@@ -61,37 +63,50 @@
         </div>
 
 
-        {% if app.user %}
+
             <div class="your-event">
-                <h2>Your next event</h2>
+                {% if app.user %}
+                    <h2>Your next event</h2>
 
-                {% if app.user.events | length > 0 %}
+                    {% if app.user.events | length > 0 %}
 
 
-                    <div class="home-created event">
-                        <div class="home-created-top">
-                            <figure class="home-created-img event-img">
-                                {% if createdEvent.image %}
-                                    <img src="{{ asset('img/event/' ~ createdEvent.image) }}" alt="">
-                                {% else %}
-                                    <img src="{{ asset('img/partials/image_not_found.png') }}" alt="">
-                                {% endif %}
-                            </figure>
+                        <div class="home-created event">
+                            <div class="home-created-top">
+                                <figure class="home-created-img event-img">
+                                    {% if createdEvent.image %}
+                                        <img src="{{ asset('img/event/' ~ createdEvent.image) }}" alt="">
+                                    {% else %}
+                                        <img src="{{ asset('img/partials/image_not_found.png') }}" alt="">
+                                    {% endif %}
+                                </figure>
 
-                            <div class="home-created-title">
-                                <h2>{{ createdEvent.title|upper }}</h2>
-                                <h3>Starts : {{ createdEvent.datetimeStart|date("d/m/Y H:i") }}</h3>
-                                <h3>Ends : {{ createdEvent.datetimeEnd|date("d/m/Y H:i") }}</h3>
+                                <div class="home-created-title">
+                                    <h2>{{ createdEvent.title|upper }}</h2>
+                                    <h3>Starts : {{ createdEvent.datetimeStart|date("d/m/Y H:i") }}</h3>
+                                    <h3>Ends : {{ createdEvent.datetimeEnd|date("d/m/Y H:i") }}</h3>
+                                </div>
+
+                            </div>
+
+                            <p>{{ createdEvent.description }}</p>
+
+                            <div class="home-created-bottom">
+                                <div class="btns">
+                                    <a class="btn" href="{{ path('event_edit', {'id': createdEvent.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
+                                    <a class="btn" href="{{ path(name = 'event_show', parameters = {title: createdEvent.title, id: createdEvent.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                </div>
                             </div>
                         </div>
-
-                        <p>{{ createdEvent.description }}</p>
-                    </div>
+                    {% else %}
+                        <p>You have not yet created an event</p>
+                        <a class="btn" href="{{ path('event_new') }}">Create an event</a>
+                    {% endif %}
                 {% else %}
-                    <p>You have not yet created an event</p>
+                    <h2>Login to create an event!</h2>
                 {% endif %}
             </div>
-        {% endif %}
+
 
     </div>
 {% endblock %}
