fixed all conditions regarding event requests

--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -41,11 +41,13 @@
                     </a>
                 {% else %}
                     {% if event.isPrivate %}
-                        <a class="btn event-detail-btn" href={{ path('event_request', {id: event.id, title: event.title}) }}>Send a request</a>
-                    {% elseif user.hasEventRequest(event) %}
-                        <a class="btn event-detail-btn" href="{{ path('event_cancel_request', {id: event.id, title: event.title}) }}">Cancel request</a>
+                        {% if app.user.hasEventRequest(event) %}
+                            <a class="btn event-detail-btn" href="{{ path('event_cancel_request', {id: event.id, title: event.title}) }}">Cancel request</a>
+                        {% else %}
+                            <a class="btn event-detail-btn" href="{{ path('event_request', {id: event.id, title: event.title}) }}">Send a request</a>
+                        {% endif %}
                     {% else %}
-                        <a class="btn event-detail-btn" href={{ path('event_join', {id: event.id, title: event.title}) }}>Join</a>
+                        <a class="btn event-detail-btn" href="{{ path('event_join', {id: event.id, title: event.title}) }}">Join</a>
                     {% endif %}
                 {% endif %}
                 <a class="btn btn-secondary-detail event-detail-btn" href="">Share <i class="fa-solid fa-share-nodes"></i></a>
