fixed delete button style

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,8 @@
 :root{
     --dark: #272D2D;
     --light: #FDF0D5;
-    --primary: #FF5400
+    --primary: #FF5400;
+    --delete: #7c0909;
 }
 
 *{
@@ -306,6 +307,16 @@ main{
 .btn-secondary-detail{
     background-color: var(--dark);
     color: var(--light) !important;
+}
+
+.btn-delete-detail{
+    background-color: var(--delete);
+    color: var(--light) !important;
+}
+
+.btn-delete-detail:hover{
+    border-color: #ff0000;
+    background-color: #ff0000;
 }
 
 
