--- a/templates/default/home.html.twig
+++ b/templates/default/home.html.twig
@@ -41,13 +41,22 @@
                        {% if app.user == event.creator %}
                            <a class="btn" href="{{ path('event_edit', {'id': event.id}) }}">Edit <i class="fa-solid fa-pen-to-square"></i></a>
                        {% else %}
-                           {% if app.user in event.users %}
-                               <a class="btn event-leave-btn" href="{{ path('event_leave', {id: event.id, title: event.title}) }}">
-                                   Joined <i class="fa-solid fa-check"></i>
-                               </a>
-                           {% else %}
-                               <a class="btn" href={{ path('event_join', {id: event.id, title: event.title}) }}>Join</a>
-                           {% endif %}
+                               {% if event.isPrivate %}
+                                   {% if app.user and app.user.hasEventRequest(event) %}
+                                       <a class="btn" href="{{ path('event_cancel_request', {id: event.id, title: event.title}) }}">Cancel request</a>
+                                   {% elseif app.user != event.creator %}
+                                       <a class="btn" href="{{ path('event_request', {id: event.id, title: event.title}) }}">Send a request</a>
+                                   {% endif %}
+                               {% else %}
+                                   {% if app.user in event.users %}
+                                       <a class="btn event-leave-btn" href="{{ path('event_leave', {id: event.id, title: event.title}) }}">
+                                           Joined <i class="fa-solid fa-check"></i>
+                                       </a>
+                                   {% else %}
+                                       <a class="btn" href={{ path('event_join', {id: event.id, title: event.title}) }}>Join</a>
+                                   {% endif %}
+                               {% endif %}
+
                        {% endif %}
 
                        <a class="btn" href="{{ path(name = 'event_show', parameters = {title: event.title, id: event.id}) }}">See more <i class="fa-solid fa-arrow-up-right-from-square"></i></a>
@@ -68,7 +77,7 @@
                 {% if app.user %}
                     <h2>Your next event</h2>
 
-                    {% if app.user.events | length > 0 %}
+                    {% if createdEvent %}
 
 
                         <div class="home-created event">
