--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,7 +39,7 @@ h3{
     justify-content: center;
     align-items: center;
     gap: 1em;
-    width: 150px;
+    width: max-content;
 }
 
 .btn {
@@ -101,7 +101,7 @@ main{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 5em;
+    gap: 1em;
     padding: 1em;
     border-radius: 30px;
     background-color: var(--dark);
