--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -45,6 +45,8 @@
             <input type="submit" value="Connect">
         </form>
 
+        <a class="login-with-google-btn" href="{{ path('connect_google')}}">Se connecter avec Google</a>
+
         <a class="link" href="{{ path('app_register') }}">Create an account</a>
     </div>
 
