--- a/templates/event/show.html.twig
+++ b/templates/event/show.html.twig
@@ -56,7 +56,7 @@
             </div>
 
             <div class="btns">
-                {% if app.user != event.creator %}
+                {% if app.user and app.user != event.creator %}
                     {% if isJoined %}
                         <a class="btn event-detail-btn event-leave-btn" href="{{ path('event_leave', {id: event.id, title: event.title}) }}">
                             Joined <i class="fa-solid fa-check"></i>
